--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ body {
 
 .container {
 	width: 100vw;
-	height: 100%;
+	height: 100vh;
 	display: grid;
 	grid-template-columns: 1fr 3fr 1fr;
-	grid-template-rows: 40px 80px 20px 1fr;
+	grid-template-rows: 40px 80px 40px 1fr;
 }
 
 .sidebar {
@@ -130,6 +130,7 @@ a {
 	grid-column: 2 / 4;
 	grid-row: 2 / 3;
 	grid-template-columns: 1fr 6fr 1fr 1fr 1fr;
+	box-shadow: rgba(0, 0, 0, 0.3) 2px 2px 3px;
 }
 
 .lg-icon {
@@ -152,17 +153,86 @@ h3 {
 }
 
 .button-container {
-	align-self: end;
+	align-self: center;
 	justify-self: center;
+	font-size: 12px;
 }
 
 button {
-	width: 4.5rem;
-	height: 1.5rem;
+	width: 5rem;
+	height: 1.8rem;
 	border-radius: 0.75rem;
 	background-color: #60a5fa;
 	color: white;
-	font-size: 10px;
+	font-size: 8px;
 	font-weight: 700;
 	border: none;
+}
+
+.title-line {
+	grid-column: 2 / 4;
+	grid-row: 3 / 4;
+	background-color: #e5e7eb;
+	display: grid;
+	grid-template-columns: 3fr 1fr;
+	font-weight: 600;
+	font-size: 0.95rem;
+}
+
+.p1 {
+	grid-column: 1 / 2;
+	margin-left: 10px;
+}
+
+.p2 {
+	grid-column: 2 / 3;
+}
+
+.card-container {
+	display: grid;
+	grid-column: 2 / 3;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr 60px;
+	gap: 20px;
+	background-color: #e5e7eb;
+}
+
+.card-1,
+.card-3,
+.card-5 {
+	margin-left: 15px;
+}
+
+.card-2,
+.card-4,
+.card-6 {
+	margin-right: 15px;
+}
+.card {
+	background-color: white;
+	height: 200px;
+	border-radius: 6px;
+	justify-items: left;
+	padding-left: 20px;
+	border-left: 8px solid #facc15;
+	box-shadow: rgba(0, 0, 0, 0.3) 2px 2px 3px;
+	display: grid;
+	grid-template-rows: 3fr 1fr;
+	align-self: top;
+}
+
+.card-header {
+	font-size: 1.1rem;
+	font-weight: 700;
+}
+
+.card-main {
+	align-self: center;
+}
+
+.icon-row {
+	display: grid;
+	width: 100%;
+	justify-content: end;
+	grid-template-columns: 3fr 1fr 1fr 1fr;
 }
